# Ame-Furi

./: .gitignore  README.md  inference.py  pyproject.toml  train.py
ame_furi/: ddpm.py
config/: base.yaml
data/: download_mnist.py  test_flower_dataset.py
models/: unet.py  unet3d.py
