[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ame-furi"
version = "0.1.0"
description = "Let the rain drop."
authors = [{ name = "PoTaTo", email = "1228427403@qq.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA 4.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CC-BY-NC-SA 4.0 License",
    "Operating System :: OS Independent",
]

[project.dependencies]

torch = "<=2.4.1"
torchvision = ">=0.15.0"
hydra-core = ">=1.3.0"
omegaconf = ">=2.3.0"
numpy = "<=1.26.4"
tqdm = ">=4.0.0"
tensorboard = ">=2.12.0"
pathlib = ">=1.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]